feat: Agregar la opción de poder obtener la Ip

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="section-main">
         <div class="section-body">
             <form id="form">
-                <input type="text" name="ip" id="ipInput" placeholder="Enter IP Address" required>
+                <input type="text" name="ip" id="ipInput" placeholder="Type an IP Address or leave blank for your IP" >
                 <button type="submit">Search</button>
             </form>
         </div>
